# ask-pesu

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  index.md
.github/workflows/: deploy-prod.yaml  deploy-staging.yaml  docker.yaml  pre-commit.yaml
.next/: trace
app/: __init__.py  app.py  quota.py  rag.py
app/docs/: __init__.py  ask.py  base.py  health.py  index.py  quota.py
app/models/: __init__.py  request.py  response.py
app/models/request/: ask.py
app/models/response/: ask.py  health.py  quota.py
conf/: config.yaml
frontend/: .gitignore  .prettierrc  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.js  page.js
frontend/app/utils/: query.js
frontend/components/customUi/: customSelect.js  customTextarea.js  llmResponse.js  queryInput.js  thinkinganimation.js  userPrompt.js
frontend/components/custom_ui/: llm_response.js  query_input.js
frontend/hooks/: useAvail.js  useQuota.js
